Use token profile and delete check users (#140)
Signed-off-by: achour94 <berrahmaachour@gmail.com>